--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ serde = "1.0.126"
 serde_json = "1.0.64"
 serde_derive = "1.0.126"
 log = "^0.4"
+log4rs = "1.0.0"
 hex = "^0.4"
 base58check = "^0.1"
 diesel = { version="1.1.0", features=["sqlite"] }
