--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ src = "src/main.rs"
 [dependencies]
 bitcoincore-rpc = { version="0.13" }
 bitcoin = { version="^0.26.2", features=["use-serde", "rand", "bitcoinconsensus"] }
-serde = "1.0.126"
+serde = {version = "1.0.126", features = ["rc"]}
 serde_json = "1.0.64"
 serde_derive = "1.0.126"
 log = "^0.4"
@@ -25,3 +25,4 @@ dotenv_codegen = "0.15"
 uuid = { version="0.8.2", features=["serde", "v4"] }
 rayon = "1.5.1"
 hashbrown = { version="0.11.2", features=["rayon", "serde"] }
+bincode = "1.3.3"
