--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,3 +26,4 @@ uuid = { version="0.8.2", features=["serde", "v4"] }
 rayon = "1.5.1"
 hashbrown = { version="0.11.2", features=["rayon", "serde"] }
 bincode = "1.3.3"
+ctrlc = "3.1.9"
