--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,12 @@ src = "src/main.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[profile.release]
+opt-level = 3
+overflow-checks = false
+lto = true
+codegen-units = 1
+
 [dependencies]
 bitcoincore-rpc = { version="0.13" }
 bitcoin = { version="^0.27.0", features=["use-serde", "rand", "bitcoinconsensus"] }
@@ -27,3 +33,4 @@ rayon = "1.5.1"
 hashbrown = { version="0.11.2", features=["rayon", "serde"] }
 bincode = "1.3.3"
 ctrlc = "3.1.9"
+xxhash-rust = {version = "0.8.2", features = ["xxh3", "const_xxh3", "xxh64", "const_xxh64"]}
