Configured with cmdline

--- a/log4rs.yaml
+++ b/log4rs.yaml
@@ -2,6 +2,8 @@ refresh_rate: 30 seconds
 appenders:
   stdout:
     kind: console
+    encoder:
+      pattern: "{d(%H:%M:%S.%f)} {l} {t} - {m}{n}"
   entries:
     kind: file
     path: "target/buttcoin.log"
